variation_study/starcoder2_temp1.0/run1/azure_015.yaml
# Generated by ollama (starcoder2)
# Prompt: Create an ARM template for Azure resources that use service endpoints for connectivity. Enable service endpoints for Storage and SQL on our VNet but allow public access as fallback. This provides flexibility for accessing resources from both Azure and on-premises during migration.
# Category: cloud_network_security

apiVersion: 2017-05-10
$schema: https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json
parameters:
    vnetName:
        type: string
        metadata:
          description: >-
            A name for the VNet to deploy the SQL database to, and where it will be accessible from. This VNet is a sibling resource of the SQL Server.

    sqlServerAddressPrefixListName:
        type: string
        metadata:
          description: >-
            A name for the Address Prefix List which contains the IP address space that is available for connecting to the SQL Server. This IP address space should be a superset of the IP address space that we will deploy to our VNet.

    sqlDataSpacePrefixListName:
        type: string
        metadata:
          description: >-
            A name for the Address Prefix List which contains the IP address space that is available for connecting to the SQL database. This IP address should be a superset of the IP address in the SQL Server address prefix list.

resources:
    - deploymentMode: Exclusive
      type: Microsoft.Network/virtualNetworks
      name: VNet
      apiVersion: 2017-03-01
      location: <resource_location> # [FILL THIS IN]
      sku:
        tier: Standard
      properties:
        addressSpace:
          - id: /subscriptions/<subscriptionid>/resourceGroups/<resourcegroupname>/providers/Microsoft.Network/virtualNetworks/<vnetname>/subnets/Default/addressPrefixes/<addressPrefixListName> # [FILL THIS IN]
          - <ip_address_space> # [FILL THIS IN]. This IP address should be a superset of the SQL Server address prefix list and data space prefix lists' subnet.

    - deploymentMode: Exclusive
      type: Microsoft.Network/virtualNetworks/subnets
      name: VNet-Subnet-Default
      apiVersion: 2017-03-01
      location: <resource_location> # [FILL THIS IN]
      properties:
        addressPrefix: /subscriptions/<subscriptionid>/resourceGroups/<resourcegroupname>/providers/Microsoft.Network/virtualNetworks/<vnetname>/subnets/Default/addressPrefixes/<addressPrefixListName> # [FILL THIS IN]

    - deploymentMode: Exclusive
      type: Microsoft.Network/publicIpAddresses
      name: PublicIpAddress
      apiVersion: 2017-03-01
      location: <resource_location> # [FILL THIS IN]
      sku:
        name: "Basic"
      properties: {}

    - deploymentMode: Exclusive
      type: Microsoft.Network/networkSecurityGroups
      name: NSG
      apiVersion: 2017-03-01
      location: <resource_location> # [FILL THIS IN]
      properties: 
        defaultSecurityRules:
          - access: Allow
            description: Allow SQL Connections
            direction:Inbound
            destinationAddressPrefix: *
            destinationPortRange: "1433"
            priority: 255 
            protocol: TCP
            sourceAddressPrefix: *
        # Add another rule here to allow access to the SQL endpoint. Make sure the IP address is an appropriate superset of the SQL endpoint.

    - deploymentMode: Exclusive
      type: Microsoft.Network/networkSecurityGroups/securityRules
      name: NSG-SQL-Access
      apiVersion: 2017-03-01
      location: <resource_location> # [FILL THIS IN]
      dependsOn:
        - NSG
      properties: 
        access: Allow 
        description: Allow SQL Connections
        direction: Inbound
        destinationAddressPrefix: <ip address prefix for sql endpoint> # [FILL THIS IN]
        destinationPortRange: "1433"
        priority: 250 
        protocol: TCP
        sourceAddressPrefix: <IP Address Prefix List> # [FILL THIS IN]. Make sure the SQL Server's Address Prefix List is a superset of this IP address.
parameters:
    subscriptionid:
        type: string
    resourcegroupname:
        type: string
    vnetname:
        type: string
    addressPrefixListName:
        type: string
        metadata:
          description: >-
            A name for the Address Prefix List which contains the IP address space that is available for connecting to our VNet. We will deploy the SQL Server to a VNet that resides within this Address Prefix List

    sqlServerAddressPrefixListName:
        type: string
    sqlDataSpacePrefixListName:
        type: string
