variation_study/starcoder2_temp1.0/run1/cloudformation_009.yaml
# Generated by ollama (starcoder2)
# Prompt: Create a CloudFormation template for our complete application stack (VPC, EC2, RDS, S3, Load Balancer). Focus on core infrastructure components. We'll add CloudWatch alarms and detailed monitoring after we deploy and verify the basic setup works.
# Category: cloud_monitoring

---
AWSTemplateFormatVersion: '2010-09-09'
Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 172.31.0.0/16
      Tags:
        - Key: Name
          Value: !Sub "awsdemo-${AWS::StackName}"
      EnableDnsSupport: 'true'
      EnableDnsHostnames: 'true'

  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: ap-northeast-1a
      CidrBlock: 172.31.0.0/24
      Tags:
        - Key: Name
          Value: !Sub 'awsdemo-privatesubnet-${AWS::StackName}-ap-northeast-1a'

  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: ap-northeast-1c
      CidrBlock: 172.31.8.0/24
      Tags:
        - Key: Name
          Value: !Sub 'awsdemo-privatesubnet-${AWS::StackName}-ap-northeast-1c'

  PrivateSubnet3:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: ap-northeast-1d
      CidrBlock: 172.31.9.0/24
      Tags:
        - Key: Name
          Value: !Sub 'awsdemo-privatesubnet-${AWS::StackName}-ap-northeast-1d'

  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: ap-northeast-1a
      CidrBlock: 172.31.0.0/24
      MapPublicIpOnLaunch: 'true'
      Tags:
        - Key: Name
          Value: !Sub 'awsdemo-publicsubnet-${AWS::StackName}-ap-northeast-1a'

  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: ap-northeast-1c
      CidrBlock: 172.31.8.0/24
      MapPublicIpOnLaunch: 'true'
      Tags:
        - Key: Name
          Value: !Sub 'awsdemo-publicsubnet-${AWS::StackName}-ap-northeast-1c'

  PublicSubnet3:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: ap-northeast-1d
      CidrBlock: 172.31.9.0/24
      MapPublicIpOnLaunch: 'true'
      Tags:
        - Key: Name
          Value: !Sub 'awsdemo-publicsubnet-${AWS::StackName}-ap-northeast-1d'

  DatabaseSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow Database access from this VPC.
      VpcId: !Ref VPC

  ApplicationSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow DB to app communication.
      VpcId: !Ref VPC
  AccessSG:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: "Allow inbound database access"
      FromPort: 5432
      GroupId: !Ref DatabaseSecurityGroup
      IpProtocol: tcp
      SourceSecurityGroupId: !Ref ApplicationSecurityGroup
      ToPort: 5432

  Ec2SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref VPC
      GroupDescription: Allow EC2 SSH access.

  InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref VPC
      GroupDescription: Allow SSH and HTTP access to instances in this VPC.

  Ec2SecurityIngressFromSG:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: 'Allow inbound ssh access'
      FromPort: 22
      IpProtocol: tcp
      SourceSecurityGroupId: !Ref InstanceSecurityGroup
      ToPort: 22
  Ec2SecurityIngressFromSGHTTP:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: 'Allow inbound http access'
      FromPort: 80
      IpProtocol: tcp
      SourceSecurityGroupId: !Ref InstanceSecurityGroup
      ToPort: 80

  SecurityGroupIngressFromDatabase:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: Allow DB to instance communication.
      FromPort: '3306'
      GroupId: !Ref ApplicationSecurityGroup
      IpProtocol: tcp
      SourceSecurityGroupId: !Ref InstanceSecurityGroup
      ToPort: 3306

  SecurityGroupIngressFromDatabasePG:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: Allow DB to instance communication.
      FromPort: '5432'
      GroupId: !Ref ApplicationSecurityGroup
      IpProtocol: tcp
      SourceSecurityGroupId: !Ref InstanceSecurityGroup
      ToPort: 5432

  LoadBalancerSecurityGroupIngressFromALB1:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: Allow ALB to instance communication.
      FromPort: '80'
      GroupId: !Ref Ec2SecurityGroup
      IpProtocol: tcp
      SourceSecurityGroupId: !Ref ApplicationSecurityGroup
      ToPort: 80

  LoadBalancerSecurityGroupIngressFromALB2:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: Allow ALB to instance communication.
      FromPort: '443'
      GroupId: !Ref Ec2SecurityGroup
      IpProtocol: tcp
      SourceSecurityGroupId: !Ref ApplicationSecurityGroup
      ToPort: 443

  LoadBalancerSecurityGroupIngressFromALB3:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: Allow ALB to instance communication.
      FromPort: '9081'
      GroupId: !Ref Ec2SecurityGroup
      IpProtocol: tcp
      SourceSecurityGroupId: !Ref ApplicationSecurityGroup
      ToPort: 9081

  SecurityGroupIngressFromALB2EC2:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: Allow ALB to instance communication.
      FromPort: '5432'
      GroupId: !Ref Ec2SecurityGroup
      IpProtocol: tcp
      SourceSecurityGroupId: !Ref ApplicationSecurityGroup
      ToPort: 5432

  SecurityGroupIngressFromALB2HTTP:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: Allow ALB to instance communication.
      FromPort: '80'
      GroupId: !Ref Ec2SecurityGroup
      IpProtocol: tcp
      SourceSecurityGroupId: !Ref ApplicationSecurityGroup
      ToPort: 80

  SecurityGroupIngressFromALB2PG:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: Allow ALB to instance communication.
      FromPort: '443'
      GroupId: !Ref Ec2SecurityGroup
      IpProtocol: tcp
      SourceSecurityGroupId: !Ref ApplicationSecurityGroup
      ToPort: 443

  SecurityGroupIngressFromALB2TCP9081:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: Allow ALB to instance communication.
      FromPort: '9081'
      GroupId: !Ref Ec2SecurityGroup
      IpProtocol: tcp
      SourceSecurityGroupId: !Ref ApplicationSecurityGroup
      ToPort: 9081

  EC2Instance1:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !FindInMap
        - Map
        - InstanceOS
        - 'ap-northeast-1'
        - Image
      IamInstanceProfile: !GetAtt EC2Role.Arn
      KeyName: ec2demo-keypair
      SecurityGroups:
        - !Ref Ec2SecurityGroup

  EC2Instance2:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !FindInMap
        - Map
        - InstanceOS
        - 'ap-northeast-1'
        - Image
      IamInstanceProfile: !GetAtt EC2Role.Arn
      KeyName: ec2demo-keypair
      SecurityGroups:
        - !Ref Ec2SecurityGroup

  EC2Instance3:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !FindInMap
        - Map
        - InstanceOS
        - 'ap-northeast-1'
        - Image
      IamInstanceProfile: !GetAtt EC2Role.Arn
      KeyName: ec2demo-keypair
      SecurityGroups:
        - !Ref Ec2SecurityGroup

  RDS1:
    Type: AWS::RDS::DBInstance
    Properties:
      DBSecurityGroups:
        - !Ref DatabaseSecurityGroup
      AllocatedStorage: 500
      Engine: aurora-mysql
      DBName: mysql-db
      MasterUsername: app-admin
      MasterUserPassword: <PASSWORD>
      InstanceClass: db.t2.small
      PubliclyAccessible: false

  RDS2:
    Type: AWS::RDS::DBInstance
    Properties:
      DBSecurityGroups:
        - !Ref DatabaseSecurityGroup
      AllocatedStorage: 500
      Engine: aurora-mysql
      DBName: mysql-db
      MasterUsername: app-admin
      MasterUserPassword: <PASSWORD>
      InstanceClass: db.t2.small
      PubliclyAccessible: false

  RDS3:
    Type: AWS::RDS::DBInstance
    Properties:
      DBSecurityGroups:
        - !Ref DatabaseSecurityGroup
      AllocatedStorage: 500
      Engine: aurora-mysql
      DBName: mysql-db
      MasterUsername: app-admin
      MasterUserPassword: <PASSWORD>
      InstanceClass: db.t2.small
      PubliclyAccessible: false

  ALB1:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name: ec2demo-loadbalancer
      Scheme: internal
      Subnets:
        - !Ref PrivateSubnet1
          - !Ref PrivateSubnet2
      SecurityGroups:
        - !Ref LoadBalancerSecurityGroup
  Listener1:
    Type: AWS::ElasticLoadBalancingV2::Listener
    DependsOn:
      - ALB1
    Properties:
      Protocol: HTTP
      Port: 80

  Listener2:
    Type: AWS::ElasticLoadBalancingV2::Listener
    DependsOn:
      - ALB1
    Properties:
      Protocol: HTTPS
      Port: 443
  Rule1:
    Type: AWS::ElasticLoadBalancingV2::ListenerRule
    Properties:
      Conditions:
        - Field: path-pattern
          Values:
            - /
      ListenerArn: !Ref Listener1

  Rule2:
    Type: AWS::ElasticLoadBalancingV2::ListenerRule
    Properties:
      Conditions:
        - Field: path-pattern
          Values:
            - /db
            - /mysql-admin
      ListenerArn: !Ref Listener2

  TargetGroup1:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    DependsOn:
      - ALB1
    Properties:
      Name: ec2demo-tg
      Protocol: TCP
      VpcId: !Ref VPC
  AppTargetGroup1:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    DependsOn:
      - ALB1
    Properties:
      Targets:
        - Id: !Ref EC2Instance
          Port: '9081'
          PortRange: '9081'
      Name: ec2demo-targetgroup
      Protocol: TCP
  AppTargetGroup2:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    DependsOn:
      - ALB1
    Properties:
      Targets:
        - Id: !Ref EC2Instance
          Port: '5432'
          PortRange: '5432'
      Name: ec2demo-targetgroup
      Protocol: TCP

  ListenerRule1:
    Type: AWS::ElasticLoadBalancingV2::ListenerRule
    Properties:
      Conditions:
        - Field: path-pattern
          Values:
            - /
            - /db
            - /mysqladmin
      Listeners:
        - ListenerArn: !Ref Listener1
      Priority: 0
  Rule2:
    Type: AWS::ElasticLoadBalancingV2::ListenerRule
    Properties:
      Conditions:
        - Field: path-pattern
          Values:
            - /
            - /db
            - /mysqladmin
      Listeners:
        - ListenerArn: !Ref Listener1
      Priority: 50

  ListenerRule2:
    Type: AWS::ElasticLoadBalancingV2::ListenerRule
    Properties:
      Conditions:
        - Field: path-pattern
          Values:
            - /db
      Listeners:
        - ListenerArn: !Ref Listener2
  Rule3:
    Type: AWS::ElasticLoadBalancingV2::ListenerRule
    Properties:
      Conditions:
        - Field: path-pattern
          Values:
            - /mysqladmin
      Listeners:
        - ListenerArn: !Ref Listener1

  Rule4:
    Type: AWS::ElasticLoadBalancingV2::ListenerRule
    Properties:
      Conditions:
        - Field: path-pattern
          Values:
            - /db/add
      Listeners:
        - ListenerArn: !Ref Listener2
  Rule5:
    Type: AWS::ElasticLoadBalancingV2::ListenerRule
    Properties:
      Conditions:
        - Field: path-pattern
          Values:
            - /db
      Listeners:
        - ListenerArn: !Ref Listener2

  Rules:
    Type: 'AWS::ElasticLoadBalancingV2::ListenerRule'
    DependsOn:
      - ListenerRule1
      - Rule2
      - Rule3
      - Rule4
  TargetGroup2:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    DependsOn:
      - ALB1
      - AppTargetGroup1
      - AppTargetGroup2
    Properties:
      Name: ec2demo-targetgroup
      Protocol: TCP

  Rules2:
    Type: 'AWS::ElasticLoadBalancingV2::ListenerRule'
    DependsOn:
      - Rule5
  TargetGroup3:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    DependsOn:
      - AppTargetGroup1
      - ALB1
    Properties:
      Name: ec2demo-targetgroup
      Protocol: TCP
